# education

labs/old/abitur/: .behaverc  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  README.md  docker-compose.deploy.yml  docker-compose.test.yml  docker-compose.yml  pyproject.toml  pyvenv.cfg
labs/old/abitur/Scripts/: activate  activate.bat  django-admin.py
labs/old/abitur/database/: Dockerfile  postgresql.conf
labs/old/abitur/docs/: Glossary.md
labs/old/abitur/environments/: .env.ci  .env.development  .env.production
labs/old/abitur/logstash/: Dockerfile
labs/old/abitur/nginx/: Dockerfile  nginx.dev.conf  nginx.prod.conf
labs/old/abitur/tests/acceptance/: Dockerfile  environment.py
labs/old/abitur/tests/acceptance/features/: citizenship.feature  education.feature  exams.feature  forgot_password.feature  login.feature  personal_info.feature  registration.feature  specialities.feature
labs/old/abitur/tests/acceptance/steps/: given_user.py  then_letter.py  then_redirected.py  then_see.py  then_sleep.py  then_speciality.py  when_check.py  when_click.py  when_fill.py  when_select.py  when_speciality.py  when_visit.py
labs/old/abitur/web/: .bandit  .coveragerc  .flake8  Dockerfile  entrypoint.load_fixtures.sh  entrypoint.sh  mypy.ini  pytest.ini
labs/old/abitur/web/apps/accounts/: admin.py  forms.py  managers.py  models.py  urls.py
labs/old/abitur/web/apps/applicants/: apps.py  urls.py
labs/old/abitur/web/apps/applications/: apps.py  urls.py
labs/old/abitur/web/settings/: __init__.py  asgi.py  common.py  production.py  test.py  wsgi.py
(+272 files in other folders)
